--- a/FY19/Views/Shared/Widgets/StaticTextView.cshtml
+++ b/FY19/Views/Shared/Widgets/StaticTextView.cshtml
@@ -12,4 +12,4 @@
     else { htmlText = Model.Properties.Text; }
 }
 
-@Html.Raw(HttpUtility.HtmlDecode(htmlText));
+@Html.Raw(HttpUtility.HtmlDecode(htmlText))
