--- a/FY19/Views/Shared/PageTemplates/KMJ_MasterPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_MasterPageView.cshtml
@@ -495,7 +495,24 @@
 
                         @Html.Kentico().EditableArea("BreadCrumbsZone", defaultSectionIdentifier: null, allowedWidgets: new[] { "FY19.BreadCrumbs" });
 
-                        @Html.Kentico().EditableArea("ContentZone")
+                        @Html.Kentico().EditableArea("ContentZone",
+                                                    defaultSectionIdentifier: null,
+                                                    allowedWidgets: new[] { "FY19.Image",
+                                                                            "FY19.H2Header",
+                                                                            "FY19.H3Header",
+                                                                            "FY19.H4Header",
+                                                                            "FY19.BodyText",
+                                                                            "FY19.StaticText",
+                                                                            "FY19.AnnotationList",
+                                                                            "FY19.LinkList",
+                                                                            "FY19.BreadCrumbs",
+                                                                            "FY19.List",
+                                                                            "FY19.AnchorList",
+                                                                            "FY19.LinkButton",
+                                                                            "FY19.HeadHTML",
+                                                                            "FY19.FreeHTML",
+                                                                            "FY19.Table",
+                                                                            "FY19.Placeholder"})
 
                         <div class="footer-btn">
 
